--- a/build.gradle
+++ b/build.gradle
@@ -7,18 +7,20 @@ apply plugin: 'war'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
     mavenLocal()
 }
 
 dependencies {
     compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.2.RELEASE'
+    compile group: 'org.springframework', name: 'spring-tx', version: '4.3.2.RELEASE'
+    compile group: 'org.springframework', name: 'spring-orm', version: '4.3.2.RELEASE'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.1.Final'
     compile group: 'org.postgresql', name: 'postgresql', version: '9.4.1209.jre7'
-    compile group: 'org.springframework', name: 'spring-tx', version: '4.3.2.RELEASE'
-    compile group: 'org.springframework', name: 'spring-orm', version: '4.3.2.RELEASE'
     compile group: 'com.mchange', name: 'c3p0', version: '0.9.5.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.1'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
